@@ -1,6 +1,6 @@
 >>>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 pynetree - A light-weight parsing toolkit written in Python
-Copyright (C) 2015, 2016 by Phorward Software Technologies, Jan Max Meyer
+Copyright (C) 2015-2017 by Phorward Software Technologies, Jan Max Meyer
 www.phorward.info ++ jmm<at>phorward<dot>de
 All rights reserved. See LICENSE for more information.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~<<<
